<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="3"
    android:paddingTop="@dimen/spacing_between"
    android:paddingBottom="@dimen/spacing_between"
    android:paddingLeft="@dimen/spacing_heading"
    android:paddingRight="@dimen/spacing_heading">

    <EditText
        android:id="@+id/et_fruits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_between"
        android:autofillHints="Initial Fruits"
        android:hint="@string/initial_fruits"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_gate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginBottom="@dimen/spacing_heading"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_between"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_given1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/given"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_remaining1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remaining"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_gate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginBottom="@dimen/spacing_heading"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_between"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_given2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/given"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_remaining2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remaining"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_gate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginBottom="@dimen/spacing_heading"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_given3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/given"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_remaining3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remaining"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>